Fix to crash in QWindow::event when delete this called on closeEvent

Starting from Qt 5.11 QWindow::event is called after QDialog::closeEvent
which would cause a crash if "delete this" was called on closeEvent.  The commit
that changed this was e0b5ff4ad583befbecbcbe462998e3ed80899531. Added
a check before QWindow::event call utilizing QPointer to prevent the
function call in case object is destroyed by a user in close event handler.

Change-Id: I64a4a0f3271714e55bf7e806177f0d8b39b67fa3
Fixes: QTBUG-84222
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 036c3c19e7da5f1a280750d3c68a0cff38678029)
(cherry picked from commit 710777d5d32ef13f2037cfe58e40ff2343355759)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>